# PicoOS

./: .gitignore  CMakeLists.txt  Code_Guidelines  CodingGuidelines
.github/workflows/: makefile.yml
core/: CMakeLists.txt  picoOS.c  picoOS.h
core/CanIf/: CMakeLists.txt  canIf.c  canIf.h
core/Hardware/: CMakeLists.txt  MCalTypes.h
core/Hardware/PIO/: CMakeLists.txt
core/Hardware/SPI/: CMakeLists.txt
core/SystemServices/: CMakeLists.txt
nodes/: CMakeLists.txt
nodes/lightController/: CMakeLists.txt  lightController.c  lightController.h
nodes/lightController/App/: CMakeLists.txt  lightControllerApp.c  lightControllerApp.h  lightControllerIPC.c  lightControllerIPC.h  lightControllerSM.c  lightControllerSM.h
nodes/lightController/App/CDD_MosfetLed_ColdWhite/: CMakeLists.txt
nodes/lightController/App/CDD_MosfetLed_ColdWhite/src/: CDD_MosfetLed_ColdWhite.c
nodes/lightController/App/CDD_MosfetLed_WarmWhite/: CMakeLists.txt
nodes/lightController/App/CDD_MosfetLed_WarmWhite/src/: CDD_MosfetLed_WarmWhite.c
nodes/lightController/App/ColdWhiteLED/: CMakeLists.txt
nodes/lightController/App/ColdWhiteLED/src/: coldWhiteLED.c  coldWhiteLED.h  coldWhiteLED_IPC.h
nodes/lightController/App/StripRgbLED/src/: warmWhiteLED.c  warmWhiteLED.h  warmWhiteLED_IPC.h
nodes/lightController/App/WarmWhiteLED/: CMakeLists.txt
nodes/lightController/App/WarmWhiteLED/src/: warmWhiteLED.c
nodes/lightController/OS/: CMakeLists.txt
nodes/lightController/OS/CanIf/: canIf.c
nodes/lightController/OS/MCal/: pinMapping.h
nodes/lightSwitch/: CMakeLists.txt  lightSwitch.c
(+52 files in other folders)
